--- a/17_style-layer/mimic.html
+++ b/17_style-layer/mimic.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
+<!--
+    Made in China plus one: Jackie Zeng, Wen Zhang, Will Zhang
+    SoftDev
+    K17 - Styling with CSS
+    2024-10-16
+    time spent: 45 minutes
+ -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foo Layout</title>
     <link rel="stylesheet" href="style.css">
+    <title> Cosmic Mimic </title>
 </head>
 <body>
     <header>
@@ -19,12 +28,17 @@
                 <li>de udda ting</li>
             </ul>
         </nav>
-        <section class="content">
-            <h2>main foo heading</h2>
-            <p>Bacon ipsum dolor amet kielbasa biltong salami pork loin andouille chislic. Pig t-bone pork prosciutto pork belly landjaeger. Leberkas tongue pork belly, ground round corned beef biltong doner t-bone. Shankle pork belly leberkas spare ribs turkey sausage capicola, pork chop strip steak corned beef drumstick salami chicken. Short ribs flank chuck bresaola turducken.</p>
-            <p>Landjaeger sirloin drumstick jerky frankfurter short ribs salami kevin boudin turkey meatloaf sausage alcatra pig doner. Beef filet mignon doner, ground round tongue brisket sirloin picanha pork boudin venison sausage shankle bacon andouille. Ham meatloaf turducken ham hock, salami cow strip steak bacon. Strip steak beef ribs meatball, porchetta tail tri-tip bacon prosciutto frankfurter cupim kevin doner rump alcatra. Venison rump cow, tail ribeye filet mignon buffalo sausage spare ribs. Tri-tip boudin burgdoggen salami, biltong pig flank ground round.</p>
-            <p>Drumstick capicola burgdoggen, tongue hamburger meatball venison pork chop ground round turkey corned beef ball tip. Biltong capicola rump buffalo ham hock, sirloin tongue. Kevin porchetta short loin, pancetta chuck shank fatback frankfurter ham. Fatback short ribs jerky chuck pork chop alcatra cow burgdoggen sirloin shoulder pork belly.</p>
-        </section>
+    <section class="content">
+        <h2>main foo heading</h2>
+        <p>Bacon ipsum dolor amet kielbasa biltong salami pork loin andouille chislic. Pig t-bone pork prosciutto pork belly landjaeger. Leberkas tongue pork belly, ground round corned beef biltong doner t-bone. Shankle pork belly leberkas spare ribs turkey sausage capicola, pork chop strip steak corned beef drumstick salami chicken. Short ribs flank chuck bresaola turducken.
+        </p>
+        <p>Landjaeger sirloin drumstick jerky frankfurter short ribs salami kevin boudin turkey meatloaf sausage alcatra pig doner. Beef filet mignon doner, ground round tongue brisket sirloin picanha pork boudin venison sausage shankle bacon andouille. Ham meatloaf turducken ham hock, salami cow strip steak bacon. Strip steak beef ribs meatball, porchetta tail tri-tip bacon prosciutto frankfurter cupim kevin doner rump alcatra. Venison rump cow, tail ribeye filet mignon buffalo sausage spare ribs. Tri-tip boudin burgdoggen salami, biltong pig flank ground round.
+        </p>
+        <p>Drumstick capicola burgdoggen, tongue hamburger meatball venison pork chop ground round turkey corned beef ball tip. Biltong capicola rump buffalo ham hock, sirloin tongue. Kevin porchetta short loin, pancetta chuck shank fatback frankfurter ham. Fatback short ribs jerky chuck pork chop alcatra cow burgdoggen sirloin shoulder pork belly.
+        </p>
+    </section>
     </div>
+
+    <footer> Copyright © 2015 Clyde "Thluffy" Sinclair </footer>
 </body>
 </html>
