--- a/20_tw_Made_In_Antarctica_zhangW_huangD/index.html
+++ b/20_tw_Made_In_Antarctica_zhangW_huangD/index.html
@@ -8,9 +8,13 @@
 
     <body>
         <!--
-            p-6 : Padding of size 6  
+            p-6 : Padding of size 6
             max-w-sm : Max width of 384px
             mx-auto : Auto margins
+            ml : margins left
+            mt : margins top
+            mr : margins right
+            md : margins down
             bg-white : background of white color
             rounded-xl : Rounds the corner of the box
             shadow-lg : Shadow of the box
@@ -18,16 +22,67 @@
             items-center : Center the items
             gap-x-4 : Spacing between image and text
         -->
-        <div class = "p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg flex items-center gap-x-4">
-            <!-- Will not shrink whatever is inside the div -->
-            <div class = "shrink-0">
-                <img class = "size-20" src="Tailwind_CSS_Logo.svg.png">    
+        <div class = "grid grid-cols-4 gap-5">
+            <!-- box 1 -->
+            <div class = "max-w-sm ml-20 mt-10 items-center flex">
+                <div class = "shrink-0">
+                    <img class = "size-20" src="Tailwind_CSS_Logo.svg.png">    
+                </div>
+                <div>
+                    <!-- Font  -->
+                    <div class = "text-xl font-medium text-black"> Tailwind </div>
+                    <p class = "text-black"> 
+                        You can directly add CSS customization within the HTML file instead of linking a CSS file with!
+                        You do this by adding different keywords for modifiers in a class within the tags. 
+                    </p>
+                </div>
             </div>
-            <div>
-                <!-- Font  -->
-                <div class = "text-xl font-medium text-black"> Tailwind </div>
-                <p class = "text-black"> You can directly add CSS customization within the HTML file instead of linking a CSS file with code! </p>
+
+            <!-- box 2 -->
+            <div class = "max-w-sm ml-20 mt-10 items-center flex shadow-lg gap-x-4">
+                <div class = "shrink-0">
+                    <img class = "size-20" src="Tailwind_CSS_Logo.svg.png">    
+                </div>
+                <div>
+                    <!-- Font  -->
+                    <div class = "text-xl font-medium text-black"> Tailwind </div>
+                    <p class = "text-black"> 
+                        You can add shadows to your containers using "shadow-lg" and 
+                        also add gaps between items using gap-(x or y axis)-(size of gap)
+                    </p>
+                </div>
             </div>
+
+            <!-- box 3 -->
+            <div class = "max-w-sm ml-20 mt-10 items-center flex shadow-lg gap-x-4 rounded-xl p-6">
+                <div class = "shrink-0">
+                    <img class = "size-20" src="Tailwind_CSS_Logo.svg.png">    
+                </div>
+                <div>
+                    <!-- Font  -->
+                    <div class = "text-xl font-medium text-black"> Tailwind </div>
+                    <p class = "text-black"> 
+                        Add rounded edges to containers using "rounded-xl" and
+                        padding by using p-(size of padding)
+                    </p>
+                </div>
+            </div>
+
+            <!-- box 4 -->
+            <div class = "max-w-sm ml-20 mt-10 items-center flex shadow-lg gap-x-4 rounded-xl p-6 hover:bg-sky-100">
+                <div class = "shrink-0">
+                    <img class = "size-20" src="Tailwind_CSS_Logo.svg.png">    
+                </div>
+                <div>
+                    <!-- Font  -->
+                    <div class = "text-xl font-medium text-black"> Tailwind </div>
+                    <p class = "text-black"> 
+                        Hover me!
+                        You can add hovers over items by using hover:(any background color i.e bg-sky-100)
+                    </p>
+                </div>
+            </div>
+
         </div>
     </body>
 </html>
