--- a/20_tw_Made_In_Antarctica_zhangW_huangD/index.html
+++ b/20_tw_Made_In_Antarctica_zhangW_huangD/index.html
@@ -22,7 +22,7 @@
             items-center : Center the items
             gap-x-4 : Spacing between image and text
         -->
-        <div class = "grid grid-cols-4 gap-2">  <!-- grids of 4 columns with a gap of 2 padding in between each grid element -->
+        <div class = "grid grid-cols-4 gap-1 mr-20 mb-10">  <!-- grids of 4 columns with a gap of 2 padding in between each grid element -->
             <!-- box 1 -->
             <div class = "max-w-sm ml-20 mt-10 items-center flex">
                 <div class = "shrink-0">
@@ -155,6 +155,43 @@
                 </div>
             </div>
 
+            <!-- box 9
+            
+            overflow/overscroll: adjust overflowing content by hiding/scrolling/clipping
+            -->
+            <div class = "ring-4 max-w-sm ml-20 mt-10 items-center flex shadow-lg gap-x-4 rounded-xl p-6 border-2 border-sky-500 hover:bg-sky-100 transition ease-in-out duration-300">
+                <div class = "shrink-0">
+                    <img class = "size-20" src="Tailwind_CSS_Logo.svg.png">    
+                </div>
+                <div>
+                    <div class = "text-xl font-medium text-black"> Tailwind </div>
+                    <p class = "text-black overflow-y-auto max-h-40"> 
+                        Scroll Here! You can adjust your overflowing content in containers through overflow or overscroll. Through this function, you will be able add scroll bars, hide content, or just clip content. 
+                    </p>
+                </div>
+            </div>
+
+            <!-- box 10
+            
+            grid-cols-subgrid + col-start-2 : to make containers skip columns within your grid
+            font-(font family): allows you to use different fonts
+            decoration-(decoration) - allows you to decorate your text
+            -->
+            <div class = "grid grid-cols-subgrid gap-1 col-span-3">
+                <div class = "col-start-2 ring-4 max-w-sm ml-20 mt-10 items-center flex shadow-lg gap-x-4 rounded-xl p-6 border-2 border-sky-500 hover:bg-sky-100 transition ease-in-out duration-300">
+                    <div class = "shrink-0">
+                        <img class = "size-20" src="Tailwind_CSS_Logo.svg.png">    
+                    </div>
+                    <div>
+                        <div class = "text-xl font-medium text-black"> Tailwind </div>
+                        <div class = "overflow-y-auto max-h-40">
+                            <p class = "font-serif"> You can use different font families</p>
+                            <p class = "font-sans underline decoration-wavy"> and different decorations.</p>
+                            <p class = "font-mono underline decoration-double decoration-indigo-500"> Additionally you can make your decorations different colors. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
