--- a/20_tw_Made_In_Antarctica_zhangW_huangD/index.html
+++ b/20_tw_Made_In_Antarctica_zhangW_huangD/index.html
@@ -1,3 +1,11 @@
+<!-- 
+Made_In_Antartica - Wen Zhang, Danny Huang
+SoftDev
+K20 - Tailwind Demo - Demoing Tailwind CSS on an HTML Page!
+2024-11-15
+time spent: 2 hrs
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
